--- a/falk.conf
+++ b/falk.conf
@@ -14,6 +14,6 @@ ssh_user = chantal
 ssh_known_host_key =
 ssh_host = localhost
 
-base_image = localhost/sft/openage:sid
+base_image = localhost/sft/openage:stable
 
-command = podman run -dt -p {SSHPORT}:22/tcp --name {IMAGENAME} --mount=type=bind,source=/srv/kevin/containers/openage/debian-sid/ccache,destination=/home/chantal/.ccache {BASE_IMAGE}
+command = podman run -dt -p {SSHPORT}:22/tcp --name {IMAGENAME} --mount=type=bind,source=/srv/kevin/containers/openage/debian/ccache,destination=/home/chantal/.ccache {BASE_IMAGE}
