--- a/project.conf
+++ b/project.conf
@@ -4,6 +4,7 @@ job_max_output = 20MiB
 job_timeout = 30min
 job_silence_timeout = 5min
 job_desc_file = kevinfile
+git_fetch_depth = 0
 
 [github_webhook]
 hooksecret = xxx
