generate status badge

--- a/project.conf
+++ b/project.conf
@@ -15,6 +15,12 @@ ctrl_labels_rebuild = kevin-rebuild-pl0x
 user = SFTbot
 token = xxx
 
+[status_badge]
+base_text = Kevin CI
+
+[symlink_branch]
+only = master
+
 [job.1]
 name = debian
 description = release build on debian with gcc
