--- a/justin.conf
+++ b/justin.conf
@@ -7,26 +7,13 @@ control_socket_permissions = 777
 #control_socket_group = kevin
 vm_ports = [4444,5000]
 
-#[debian-podman]
-#name = debian-openage
-#type = podman
-#ssh_user = chantal
-#ssh_known_host_key =
-#ssh_host = localhost
-#
-#base_image = localhost/sft/openage:stable
-#
-#command = podman run -dt -p {SSHPORT}:22/tcp --name {IMAGENAME} --mount=type=bind,source=/srv/kevin/containers/openage/debian/ccache,destination=/home/chantal/.ccache {BASE_IMAGE}
-
-[ubuntu-lxd]
-name = ubuntu-openage
-type = lxd
+[debian-podman]
+name = debian-openage
+type = podman
 ssh_user = chantal
-ssh_port = 22
 ssh_known_host_key =
-ssh_host = __dynamic__
+ssh_host = localhost
 
-base_image = openage/ubuntu-lts
+base_image = localhost/sft/openage:stable
 
-# todo asdf lxd pre-setup commands
-precmd =
+command = podman run -dt -p {SSHPORT}:22/tcp --name {IMAGENAME} --mount=type=bind,source=/srv/kevin/containers/openage/debian/ccache,destination=/home/chantal/.ccache {BASE_IMAGE}
