control socket in /run/kevin/justin

--- a/justin.conf
+++ b/justin.conf
@@ -2,7 +2,7 @@
 
 [justin]
 name = ssn-justin
-control_socket = /tmp/kevin/justin
+control_socket = /run/kevin/justin
 control_socket_permissions = 777
 #control_socket_group = kevin
 vm_ports = [4444,5000]
