only allow branch link from main github repo

--- a/project.conf
+++ b/project.conf
@@ -19,7 +19,8 @@ token = xxx
 base_text = Kevin CI
 
 [symlink_branch]
-only = master
+only = github/SFTtech/openage/master
+alias = github/SFTtech/openage/master:master
 
 [job.1]
 name = debian
